Fix buttons on ios

--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -143,6 +143,7 @@
   outline: none;
   cursor: pointer;
   transition: box-shadow 0.2s;
+  -webkit-appearance: none;
 }
 
 /* Overlay */
